# langchain-alayalite

./: .gitignore  README.md  pyproject.toml
.github/scripts/: check_diff.py
.github/workflows/: _compile_integration_test.yml  _release.yml  check_diffs.yml
experiments/metadata_filtering/: README.md  metadata_filtering_experiment.py
experiments/metadata_filtering/results/: metadata_filtering_report.md  metadata_filtering_results.json
langchain_alayalite/: __init__.py  vectorstores.py
libs/alayalite/: Makefile  README.md  alayalite-0.2.0a1-cp310-cp310-linux_x86_64.whl  pyproject.toml  pytest.ini
libs/alayalite/langchain_alayalite/: __init__.py  retrievers.py  vectorstores.py
libs/alayalite/scripts/: check_imports.py  lint_imports.sh
libs/alayalite/tests/integration_tests/: test_alayalite.py  test_compile.py  test_standard.py
libs/alayalite/tests/unit_tests/: test_imports.py  test_retrievers.py  test_standard.py  test_vectorstores.py
tests/integration_tests/: test_alayalite.py  test_standard.py
tests/unit_tests/: test_imports.py  test_standard.py  test_vectorstores.py
