[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-alayalite"
version = "0.1.0"
description = "LangChain VectorStore integration for AlayaLite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"

authors = [
    { name = "lpbirch", email = "wantmytearsback@qq.com" }
]

dependencies = [
    "langchain-core>=1.0.0",
    "alayalite>=0.1.1a1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "pytest",
]
lint = [
    "ruff>=0.5.0",
]
typing = [
    "mypy>=1.10.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "langchain-tests>=0.3.0",
]
test_integration = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/lpbirch/langchain-alayalite"
Source = "https://github.com/lpbirch/langchain-alayalite"
Issues = "https://github.com/lpbirch/langchain-alayalite/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_alayalite*"]

[tool.setuptools.package-data]
langchain_alayalite = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "requires: mark test as requiring a specific package",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["langchain_alayalite"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.codespell]
ignore-words-list = "alayalite"
skip = "*.lock,*.json"

